Minor update; logout

--- a/SIGN-IN.html
+++ b/SIGN-IN.html
@@ -10,6 +10,7 @@
         <h3>Password</h3>
         <h2>Two-factor autenticaion option</h2>
         <h2>Securely save billing info</h2>
+        <h2>Sign Out</h2>
         <a href="index.html">HOME</a>
     </body>
 </html>
