Create Account Prototype

--- a/CREATE-ACCOUNT.html
+++ b/CREATE-ACCOUNT.html
@@ -5,9 +5,18 @@
     </head>
     <body>
         <h1>Create Account</h1>
+        <input type= "text"   placeholder="E-Mail:">          <br>
+        <input type= "text"   placeholder="Username:">        <br>
         <h2>Set nearest store as home store</h2>
+        <input type= "text"   placeholder="Enter ZIP code">   <br>
         <h2>Create password</h2>
+        <input type= "text"   placeholder="Password:">        <br>
+        <input type= "text"   placeholder=="Verify Password:"><br>
         <h2>Change account info</h2>
+        <input type= "text"   placeholder="Change E-Mail">    <br>
+        <input type= "text"   placeholder=="Change Username"> <br>
+        <input type= "text"   placeholder="Change Password:"> <br>
+        <input type= "text"   placeholder=="Change ZIP code"> <br>
         <a href="index.html">HOME</a>
     </body>
 </html>
