--- a/CREATE-ACCOUNT.html
+++ b/CREATE-ACCOUNT.html
@@ -11,13 +11,13 @@
         <input type= "text"   placeholder="Enter ZIP code">   <br>
         <h2>Create password</h2>
         <input type= "text"   placeholder="Password:">        <br>
-        <input type= "text"   placeholder=="Verify Password:"><br>
-        <input type=“button” value=“REGISTER”> onClick="location.href='thank-you-for-registering.html'" <br>
+        <input type= "text"   placeholder="Verify Password:"><br>
+        <input type= “button” value=“REGISTER”> onClick="location.href='thank-you-for-registering.html'" <br>
         <h2>Change account info</h2>
         <input type= "text"   placeholder="Change E-Mail">    <br>
-        <input type= "text"   placeholder=="Change Username"> <br>
+        <input type= "text"   placeholder="Change Username"> <br>
         <input type= "text"   placeholder="Change Password:"> <br>
-        <input type= "text"   placeholder=="Change ZIP code"> <br>
+        <input type= "text"   placeholder="Change ZIP code"> <br>
         <a href="index.html">HOME</a>
     </body>
 </html>
