--- a/CREATE-ACCOUNT.html
+++ b/CREATE-ACCOUNT.html
@@ -12,7 +12,7 @@
         <h2>Create password</h2>
         <input type= "text"   placeholder="Password:">        <br>
         <input type= "text"   placeholder="Verify Password:"><br>
-        <input type= “button” value=“REGISTER”> onClick="location.href='thank-you-for-registering.html'" <br>
+        <input type= “button” value=“REGISTER” onClick="location.href='thank-you-for-registering.html'" <br>
         <h2>Change account info</h2>
         <input type= "text"   placeholder="Change E-Mail">    <br>
         <input type= "text"   placeholder="Change Username"> <br>
