--- a/SIGN-IN.html
+++ b/SIGN-IN.html
@@ -6,11 +6,15 @@
     <body>
         <h1>Sign In</h1>
         <h2>Account credientials</h2>
+        <input type= "text"   placeholder="Username or E-Mail:">        <br>
         <h3>Face-ID</h3>
         <h3>Password</h3>
-        <h2>Two-factor autenticaion option</h2>
+        <input type= "text"   placeholder="Password:">        <br>
+        <input type= “button” value=“Sign-In” onClick="location.href='thank-you-for-registering.html'"><br>
+        <h2>Two-factor authenticaion option</h2>
         <h2>Securely save billing info</h2>
         <h2>Sign Out</h2>
+        <input type= “button” value=“Sign-Out” onClick="location.href='thank-you-for-registering.html'"><br>
         <a href="index.html">HOME</a>
     </body>
 </html>
