--- a/SHOP-FROM-APP.html
+++ b/SHOP-FROM-APP.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Shop from app</h1>
+        <input type "text" placeholder = "search"> <img src="chips.jpg"
         <h2>Order out of stock items</h2>
         <h2>Add in stock items to cart</h2>
         <h2>Browse non-home store</h2>
