--- a/SIGN-IN.html
+++ b/SIGN-IN.html
@@ -10,11 +10,11 @@
         <h3>Face-ID</h3>
         <h3>Password</h3>
         <input type= "text"   placeholder="Password:">        <br>
-        <input type= “button” value=“Sign-In” onClick="location.href='thank-you-for-registering.html'"><br>
+        <input type=“button” value=“Sign-In” onClick="location.href='thank-you-for-registering.html'"><br>
         <h2>Two-factor authenticaion option</h2>
         <h2>Securely save billing info</h2>
         <h2>Sign Out</h2>
-        <input type= “button” value=“Sign-Out” onClick="location.href='thank-you-for-registering.html'"><br>
+        <input type="button" value="Sign Out" onclick="location.href='thank-you-for-registering.html'"><br>
         <a href="index.html">HOME</a>
     </body>
 </html>
