--- a/SHOP-FROM-APP.html
+++ b/SHOP-FROM-APP.html
@@ -6,6 +6,9 @@
     <body>
         <h1>Shop from app</h1>
         <input type "text" placeholder = "search"> <img src="chips.jpg">
+        <input type "text" placeholder = "search"> <img src="chiquita.jpg">
+        <input type "text" placeholder = "search"> <img src="manzano.jpg">
+        <input type "text" placeholder = "search"> <img src="organic.jpg">
         <h2>Order out of stock items</h2>
         <h2>Add in stock items to cart</h2>
         <h2>Browse non-home store</h2>
