--- a/SHOP-FROM-APP.html
+++ b/SHOP-FROM-APP.html
@@ -5,10 +5,21 @@
     </head>
     <body>
         <h1>Shop from app</h1>
-        <input type "text" placeholder = "search"> <img src="chips.jpg">
-        <input type "text" placeholder = "search"> <img src="chiquita.jpg">
-        <input type "text" placeholder = "search"> <img src="manzano.jpg">
-        <input type "text" placeholder = "search"> <img src="organic.jpg">
+        <input type "text" placeholder = "search"><br>
+        <table>
+            <tr>
+                <td><img src="chiquita.jpg" style="width: 50%;"></td>
+                <td><img src="chips.jpg" style="width: 50%;"></td>
+                <td><img src="manzano.jpg" style="width: 50%;"></td>
+                <td><img src="organic.jpg" style="width: 50%;"></td>
+            </tr>
+            <tr>
+                <td>Chiquita: $1 <input type="button" value="Add"></td>
+                <td>Chips: $2 <input type="button" value="Add"></td>
+                <td>Manzano: $3 <input type="button" value="Add"></td>
+                <td>Organic: $4 <input type="button" value="Add"></td>
+            </tr>
+        </table>
         <h2>Order out of stock items</h2>
         <h2>Add in stock items to cart</h2>
         <h2>Browse non-home store</h2>
