--- a/SIGN-IN.html
+++ b/SIGN-IN.html
@@ -10,7 +10,7 @@
         <h3>Face-ID</h3>
         <h3>Password</h3>
         <input type= "text"   placeholder="Password:">        <br>
-        <input type="button" value="Sign Out" onclick="location.href='thank-you-for-registering.html'"><br>
+        <input type="button" value="Sign In" onclick="location.href='thank-you-for-registering.html'"><br>
         <h2>Two-factor authenticaion option</h2>
         <h2>Securely save billing info</h2>
         <h2>Sign Out</h2>
